[gd_scene load_steps=15 format=3 uid="uid://cvegbuu7wxika"]

[ext_resource type="Script" path="res://world.gd" id="1_rxlvp"]
[ext_resource type="PackedScene" uid="uid://dpp36leb612fw" path="res://arena.tscn" id="1_sm485"]
[ext_resource type="Script" path="res://MultiplayerMenu.gd" id="3_asb1u"]
[ext_resource type="Script" path="res://HUD.gd" id="4_3loky"]
[ext_resource type="Texture2D" uid="uid://belxpkhe22pnq" path="res://addons/kenney_particle_pack/circle_05.png" id="5_osqmr"]
[ext_resource type="Texture2D" uid="uid://djocoyt5s36bk" path="res://images/sniperADS.png" id="6_51bju"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_uc3qh"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_m6tua"]
sky_material = SubResource("ProceduralSkyMaterial_uc3qh")

[sub_resource type="Environment" id="Environment_khruk"]
background_mode = 2
sky = SubResource("Sky_m6tua")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f6uqw"]
bg_color = Color(0.639216, 0.117647, 0.172549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cuny2"]
bg_color = Color(0.223529, 0.709804, 0.27451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mv5p7"]
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_54oud"]
bg_color = Color(0.384314, 0.384314, 0.384314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_adxas"]
bg_color = Color(0.486275, 0.854902, 0.992157, 1)

[node name="World" type="Node3D"]
script = ExtResource("1_rxlvp")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_khruk")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="arena" parent="." instance=ExtResource("1_sm485")]

[node name="MultiplayerMenu" type="CanvasLayer" parent="."]
script = ExtResource("3_asb1u")

[node name="MainMenuScreen" type="Control" parent="MultiplayerMenu"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="MultiplayerMenu/MainMenuScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.376471, 0.301961, 1)

[node name="MainMenu" type="PanelContainer" parent="MultiplayerMenu/MainMenuScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.311
anchor_top = 0.282
anchor_right = 0.689
anchor_bottom = 0.718
offset_left = 0.227966
offset_top = -0.236008
offset_right = -0.228027
offset_bottom = 0.235962
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MultiplayerMenu/MainMenuScreen/MainMenu"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ServerJoiner" type="VBoxContainer" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ServerJoiner"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Host" type="Button" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ServerJoiner"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ServerJoiner"]
layout_mode = 2
text = "Join"

[node name="NameEntry" type="LineEdit" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ServerJoiner"]
layout_mode = 2
placeholder_text = "Enter Name"
alignment = 1

[node name="AddressEntry" type="LineEdit" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ServerJoiner"]
layout_mode = 2
placeholder_text = "Enter Address to Join"
alignment = 1

[node name="ChooseClass" type="VBoxContainer" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="Choose Class" type="Label" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass"]
layout_mode = 2
text = "Choose a Class"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pistol One" type="Button" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass"]
layout_mode = 2
text = "Pistol One"

[node name="Pistol Two" type="Button" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass"]
layout_mode = 2
text = "Pistol Two"

[node name="Freeze Gun" type="Button" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass"]
layout_mode = 2
text = "Freeze Gun"

[node name="Speed Gun" type="Button" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass"]
layout_mode = 2
text = "Speed Gun"

[node name="Stake" type="Button" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass"]
layout_mode = 2
text = "Stake"

[node name="Sniper" type="Button" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass"]
layout_mode = 2
text = "Sniper"

[node name="HBoxContainer" type="HBoxContainer" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Sensitivity" type="Label" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "11"
vertical_alignment = 1

[node name="SensSlider" type="HSlider" parent="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass/HBoxContainer"]
custom_minimum_size = Vector2(260, 30)
layout_mode = 2
value = 11.0

[node name="HUD" type="Control" parent="MultiplayerMenu"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_3loky")

[node name="Crosshair" type="TextureRect" parent="MultiplayerMenu/HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.99994
offset_top = -7.99997
offset_right = 504.0
offset_bottom = 504.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
mouse_filter = 2
texture = ExtResource("5_osqmr")
stretch_mode = 5

[node name="Healthbar" type="ProgressBar" parent="MultiplayerMenu/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.352
anchor_top = 0.035
anchor_right = 0.648
anchor_bottom = 0.077
offset_left = 0.495972
offset_top = 0.32
offset_right = -0.495972
offset_bottom = 0.103996
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_f6uqw")
theme_override_styles/fill = SubResource("StyleBoxFlat_cuny2")
value = 100.0
show_percentage = false

[node name="Ammo" type="Label" parent="MultiplayerMenu/HUD"]
custom_minimum_size = Vector2(60, 35)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -33.0
offset_right = -15.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "9999"
label_settings = SubResource("LabelSettings_mv5p7")
horizontal_alignment = 2

[node name="AmmoBar" type="ProgressBar" parent="MultiplayerMenu/HUD"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -137.0
offset_top = -33.0
offset_right = -12.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_54oud")
theme_override_styles/fill = SubResource("StyleBoxFlat_adxas")
value = 100.0
show_percentage = false

[node name="SniperADS" type="TextureRect" parent="MultiplayerMenu/HUD"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_51bju")
expand_mode = 2

[node name="Score" type="Control" parent="MultiplayerMenu"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerLabels" type="VBoxContainer" parent="MultiplayerMenu/Score"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[node name="MultiplayerSpawner2" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../MultiplayerMenu/Score/PlayerLabels")

[connection signal="add_player" from="MultiplayerMenu" to="." method="_on_multiplayer_menu_add_player"]
[connection signal="remove_player" from="MultiplayerMenu" to="." method="_on_multiplayer_menu_remove_player"]
[connection signal="pressed" from="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ServerJoiner/Host" to="MultiplayerMenu" method="_on_host_pressed"]
[connection signal="pressed" from="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ServerJoiner/Join" to="MultiplayerMenu" method="_on_join_pressed"]
[connection signal="pressed" from="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass/Pistol One" to="MultiplayerMenu" method="_on_pistol_one_pressed"]
[connection signal="pressed" from="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass/Pistol Two" to="MultiplayerMenu" method="_on_pistol_two_pressed"]
[connection signal="pressed" from="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass/Freeze Gun" to="MultiplayerMenu" method="_on_freeze_gun_pressed"]
[connection signal="pressed" from="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass/Speed Gun" to="MultiplayerMenu" method="_on_speed_gun_pressed"]
[connection signal="pressed" from="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass/Stake" to="MultiplayerMenu" method="_on_stake_pressed"]
[connection signal="pressed" from="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass/Sniper" to="MultiplayerMenu" method="_on_sniper_pressed"]
[connection signal="changed" from="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass/HBoxContainer/SensSlider" to="MultiplayerMenu" method="_on_h_slider_changed"]
[connection signal="value_changed" from="MultiplayerMenu/MainMenuScreen/MainMenu/MarginContainer/ChooseClass/HBoxContainer/SensSlider" to="MultiplayerMenu" method="_on_sens_slider_value_changed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
